# rsa

./: .gitignore  CMakeLists.txt  generate_key.c  index.html  install_gmp.sh  pre.js  server.py
Public/: desencriptar.html  encriptar.html  gerarchave.html  saibamais.html
Public/Scripts/: StreamSaver.min.js  chave.js  chavegerada.js  desencriptar.js  download.js  encriptar.js  escritahome.js  fantasma.js  navbar.js  rsa.js  welcome.js
Public/Styles/: styles.css
back/: decode.h  encode.h  key.h  main.c  utils.h
encriptação/: teste.c
tests/: decode.test  decode.test.c  encode.test.c  generate_key.test.c
