cmake_minimum_required(VERSION 3.10)
project(rsa)
add_executable(RSA back/main.c)
target_include_directories(RSA PUBLIC $ENV{HOME}/opt/include)
target_link_libraries(RSA $ENV{HOME}/opt/lib/libgmp.a)
target_link_options(RSA PRIVATE -sEXPORTED_RUNTIME_METHODS=['FS','cwrap','print'])
target_link_options(RSA PRIVATE --pre-js=../pre.js)
target_link_options(RSA PRIVATE -sALLOW_MEMORY_GROWTH=1)